# jpeg-transcoding

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  requirements.txt
include/decoder/: dct_coefficients_filter.hpp  decoder.hpp  decoding_exception.hpp
include/encoder/: command_line_arguments.hpp  constants.hpp  discrete_cosine_transform.hpp  encoder.hpp
include/encoder/implementation/: block_encoder.hpp  encoder.hpp  y_cb_cr_block.hpp
include/utils/: bytes.hpp  dct_coefficients_filter.hpp  discrete_cosine_transform.hpp  huffman.hpp  huffman_code.hpp  image.hpp  output.hpp  quantization_table.hpp  zigzag.hpp
info/: BUILD.md  CLI.md  EXPERIMENTS.md  GOLOSSARY.md  MODULES.md  OVERVIEW.md  STRUCTURE.md
ipynb/: distributions_of_dct_coefficients.ipynb  original-coefficients-distribution.csv  transcoded-coefficients-distribution.csv
models/: model.ipynb
py/: main.py  process_images.py
py/quality_enhancement/: __init__.py  datasets.py  metrics.py  models.py
py/quality_enhancement/utils/: __init__.py  cffi.py  converters.py  jpeg_processing.py  torch_utils.py
src/: jpegdec.cpp
src/decoder/: dct_coefficients_filter.cpp  decoder.cpp  decoding_exception.cpp  jpegdec.cpp  main.cpp
src/encoder/: command_line_arguments.cpp  discrete_cosine_transform.cpp  encoder.cpp  main.cpp
src/encoder/implementation/: block_encoder.cpp  encoder.cpp
src/utils/: cffi_api.cpp  dct_coefficients_filter.cpp  discrete_cosine_transform.cpp  huffman.cpp  huffman_code.cpp  image.cpp  output.cpp
